Remove to do section for week 1 lab

--- a/course-materials/week1.qmd
+++ b/course-materials/week1.qmd
@@ -77,12 +77,7 @@ Template `.qmd` files will be provided alongside (most) lecture slides to help k
 : {.hover .bordered tbl-colwidths="[50,25,25]"}
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
-
-::: {.callout-important}
-## TODO
-- update dataset? maybe with a little less cleaning
-- kickstart HW #1
-:::
+Coming soon! 
 
 ### A. Install required packages
 
