started working on week5 landing page

--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -73,6 +73,6 @@ To recieve a "Satisfactory" on HW #1:
 - [ ] **Answer all 24 questions** about the code and outputs correctly (though a few questions are opinion-based and do not have a single correct answer). There are no strict length requirements, however we expect that you answer them thoughtfully, fully, and in your own words.
 - [ ] **Update your repo's README** so that it includes the core elements, as described in the [MEDS README Guidelines](https://ucsb-meds.github.io/README-guidelines/#always-include){target="_blank"}
 - [ ] **Render `HW1.qmd` as a PDF.** Double check that all of your outputs, code, and prose are visible.
-- [ ] **Upload your PDF to Gradescope** by 11:59pm on Wed 01/14/2026.
+- [ ] **Upload your PDF to [Gradescope](https://www.gradescope.com/courses/1191060/assignments/7337556){target="_blank}** by 11:59pm on Wed 01/14/2026.
 - [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for HW #1 by 11:59pm on Wed 01/14/2026.
 
