--- a/course-materials/assignments/SR1.qmd
+++ b/course-materials/assignments/SR1.qmd
@@ -48,5 +48,5 @@ To receive a "Satisfactory" on SR #1:
 
 - [ ] **Answer all Part II questions using the Part I template.** There are no strict length requirements for free-response questions, however we expect that you answer them thoughtfully and fully.
 - [ ] **Render `SR1.qmd` as a PDF.** Double check that all of your prose is appropriately formatted and that you've added your name to the `author` option in the document YAML.
-- [ ] **Upload your PDF to Gradescope** by 11:59pm on Fri 01/09/2026.
+- [ ] **Upload your PDF to [Gradescope](https://www.gradescope.com/courses/1191060/assignments/7337552){target="_blank}** by 11:59pm on Fri 01/09/2026.
 - [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for SR #1 by 11:59pm on Fri 01/09/2026.
