--- a/course-materials/keys/KEY-typography-annotations.qmd
+++ b/course-materials/keys/KEY-typography-annotations.qmd
@@ -308,7 +308,7 @@ showtext_auto(enable = FALSE)
 <!-- NOT RENDERED ON SLIDE -->
 
 ```{r save-eval}
-#| eval: true
+#| eval: false
 #| echo: false
 #..............enable {showtext} for newly opened GD.............
 showtext_auto(enable = TRUE)
