--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -34,7 +34,7 @@ install.packages("sf") # provides simple features access in R
 
 ### B. Download data
 
-Save data to your class repo at `EDS-240-class-examples/week4/`:
+Save data to your class repo at `EDS-240-class-examples/week5/data/`:
 
 |Lecture | Dataset title | Download link | Notes |
 |--------|---------------|---------------|-------|
@@ -45,11 +45,11 @@ Save data to your class repo at `EDS-240-class-examples/week4/`:
 
 1. Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week5/` folder.
 
-2. Review the data wrangling code under the `## Setup` section of **template 5.3** and make note of any questions you might have (no data wrangling necessary in template 5.2). Due to time constraints, we won't be live-coding our way through the data wrangling code in class. However, we'll reserve some time to answer any questions before we jump into data viz {{< fa face-smile title="a smiling face" >}}. 
+2. Review the data wrangling code under the `## Setup` section of **template 5.2** and make note of any questions you might have (no data wrangling necessary in template 5.1). Due to time constraints, we won't be live-coding our way through the data wrangling code in class. However, we'll reserve some time to answer any questions before we jump into data viz {{< fa face-smile title="a smiling face" >}}. 
 
 ### D. (OPTIONAL, but highly recommended) Install Google Chrome extensions
 
-I'll be using both of these (really wonderful and easy-to-use) tools during lecture and encourage you to install them!
+I'll be using both of these (really wonderful and easy-to-use) tools during lecture and encourage you to install them:
 
 1. **[Let's get color blind](https://chromewebstore.google.com/detail/lets-get-color-blind/bkdgdianpkfahpkmphgehigalpighjck){target="_blank"}**: simulates different color deficiencies in the browser
 2. **[Monochrome Mode: Grayscale browsing](https://chromewebstore.google.com/detail/monochrome-mode-grayscale/fmiaojphifnoicpdhhcniiekcpfbkidj?hl=en){target="_blank"}**: turns websites grayscale
